[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solarathon"
description = "Template project for Solarathon 2023"
version = "0.0.1"
dependencies = [
    "solara==1.25.0",
    "ipyleaflet==0.17.4",
    "openai==1.3.7",
    "langchain==0.0.348",
    "pydantic==1.10.8",
    "BeautifulSoup4==4.12.2"
]

[project.optional-dependencies]
dev = [
    "mypy",
]

[tool.hatch.build]
include = [
  "**/*.css",
  "**/*.py",
]
